--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/passport": "^9.3",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
