--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=webservices
+DB_DATABASE=laravel_7
 DB_USERNAME=db_user
 DB_PASSWORD=db_user_pass
 
